--- a/Client/References.props
+++ b/Client/References.props
@@ -30,21 +30,20 @@
         <When Condition="$(IsWin)">
             <!-- windows引用包 -->
             <ItemGroup>
-                <!-- ScottPlot需要 -->
-                <PackageReference Include="SkiaSharp.Views.WinUI" Version="2.88.9" />
                 <!-- Lottie动画已正常，Microsoft.Graphics.Win2D需1.2.0以上版本，Microsoft.Maui.Essentials已间接引用 -->
                 <PackageReference Include="CommunityToolkit.WinUI.Lottie" Version="8.1.240821" />
+                <!-- ScottPlot需要 -->
+                <PackageReference Include="SkiaSharp.Views.WinUI" Version="2.88.9" />
             </ItemGroup>
         </When>
         <Otherwise>
             <!-- 非windows引用包 -->
             <ItemGroup>
-                <!-- 高于5.5.95版本，android不占用顶部状态栏和底部导航栏的设置无效 -->
-                <PackageReference Include="Uno.WinUI" Version="5.5.95" PrivateAssets="none" />
+                <PackageReference Include="Uno.WinUI" Version="6.0.465" PrivateAssets="none" />
                 <!-- 对应CommunityToolkit.WinUI.Lottie库，渲染Adobe AfterEffects json动画，内部引用SkiaSharp包实现LottieVisualSource -->
-                <PackageReference Include="Uno.WinUI.Lottie" Version="5.5.95" />
+                <PackageReference Include="Uno.WinUI.Lottie" Version="6.0.465" />
                 <!-- ScottPlot需要 -->
-                <PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.9" />
+                <!--<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.9" />-->
             </ItemGroup>
         </Otherwise>
     </Choose>
@@ -53,7 +52,7 @@
     <ItemGroup Condition="$(IsAndroid)">
         <PackageReference Include="Square.OkHttp3" Version="4.12.0.9" />
         <!-- WorkManager后台任务引用 -->
-        <PackageReference Include="Xamarin.AndroidX.Work.Runtime" Version="2.8.1.6" />
+        <PackageReference Include="Xamarin.AndroidX.Work.Runtime" Version="2.9.0.5" />
     </ItemGroup>
 
     <!-- Essentials不支持 gtk(linux) wasm -->
