gtk不再支持，转Linux.FrameBuffer

--- a/Demo/Directory.Build.props
+++ b/Demo/Directory.Build.props
@@ -75,7 +75,7 @@
 		</When>
 		<Otherwise>
 			<PropertyGroup>
-				<!-- gtk wpf -->
+				<!-- linux wpf -->
 				<IsSkia>true</IsSkia>
 				<DefineConstants>$(DefineConstants);SKIA;ENABLECURSOR</DefineConstants>
 			</PropertyGroup>
