--- a/Client/Directory.Build.props
+++ b/Client/Directory.Build.props
@@ -77,7 +77,7 @@
         </When>
         <Otherwise>
             <PropertyGroup>
-                <!-- gtk wpf -->
+                <!-- linux wpf -->
                 <IsSkia>true</IsSkia>
                 <DefineConstants>$(DefineConstants);SKIA;ENABLECURSOR</DefineConstants>
             </PropertyGroup>
