--- a/Client/References.props
+++ b/Client/References.props
@@ -42,8 +42,9 @@
                 <PackageReference Include="Uno.WinUI" Version="6.0.465" PrivateAssets="none" />
                 <!-- 对应CommunityToolkit.WinUI.Lottie库，渲染Adobe AfterEffects json动画，内部引用SkiaSharp包实现LottieVisualSource -->
                 <PackageReference Include="Uno.WinUI.Lottie" Version="6.0.465" />
-                <!-- ScottPlot需要，Uno.WinUI.Lottie中也引用，版本匹配 -->
+                <!-- ScottPlot Lottie都引用，注意版本匹配 -->
                 <PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="3.119.0" />
+                <PackageReference Include="SkiaSharp.Skottie" Version="3.119.0" />
             </ItemGroup>
         </Otherwise>
     </Choose>
@@ -55,7 +56,7 @@
         <PackageReference Include="Xamarin.AndroidX.Work.Runtime" Version="2.9.0.5" />
     </ItemGroup>
 
-    <!-- Essentials不支持 gtk(linux) wasm -->
+    <!-- Essentials不支持 linux wasm -->
     <ItemGroup Condition="!$(IsWasm) and !$(IsSkia)">
         <!-- UseMauiEssentials已无用，间接引用 Microsoft.Graphics.Win2D 的版本对CommunityToolkit.WinUI.Lottie有影响，需1.2.0以上版本 -->
         <PackageReference Include="Microsoft.Maui.Essentials" Version="8.0.61" />
