--- a/Demo/Demo.Linux/Demo.Linux.csproj
+++ b/Demo/Demo.Linux/Demo.Linux.csproj
@@ -4,7 +4,7 @@
 		<OutputType Condition="'$(Configuration)'=='Debug'">Exe</OutputType>
 		<TargetFrameworks>net8.0</TargetFrameworks>
 		<ApplicationManifest>app.manifest</ApplicationManifest>
-		<AppType>gtk</AppType>
+		<AppType>linux</AppType>
 	</PropertyGroup>
 	<ItemGroup>
 		<EmbeddedResource Include="Package.appxmanifest" />
