--- a/Infras/Dt.Charts/Dt.Charts.csproj
+++ b/Infras/Dt.Charts/Dt.Charts.csproj
@@ -1,6 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Dt.Sdk">
 	<PropertyGroup>
 		<Description>图表控件库(搬运工客户端)</Description>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
+        <OutputType>Library</OutputType>
 	</PropertyGroup>
 </Project>
