--- a/Infras/Directory.Build.props
+++ b/Infras/Directory.Build.props
@@ -1,95 +1,55 @@
 ﻿<Project>
     <PropertyGroup>
-        <TargetFrameworks Condition="$(SolutionFileName.Contains('-win'))">net8.0-windows10.0.19041</TargetFrameworks>
-        <TargetFrameworks Condition="$(TargetFrameworks) == ''">net8.0-windows10.0.19041;net8.0-android;net8.0-ios;net8.0</TargetFrameworks>
-        <NoWarn>$(NoWarn);1591;NU1701;Uno0001;0252;NETSDK1206</NoWarn>
+        <!-- 修改目标框架后需重启VS有效 -->
+        <TargetFrameworks>net9.0-ios;net9.0-android;net9.0-windows10.0.26100;net9.0-browserwasm;net9.0-desktop</TargetFrameworks>
+        <!--<TargetFrameworks>net9.0-windows10.0.26100</TargetFrameworks>-->
+        
+        <NoWarn>$(NoWarn);1591;8785;NU1701;Uno0001;0252;NETSDK1206</NoWarn>
         <!-- 始终禁止xbf嵌入到pri文件，默认debug时不嵌入，release时嵌入，嵌入时包升级会造成引用项目都必须重新编译 -->
         <DisableEmbeddedXbf>true</DisableEmbeddedXbf>
-        <!-- pbd调试信息 -->
-        <DebugType>portable</DebugType>
-        <DebugSymbols>True</DebugSymbols>
-        <IsWin>false</IsWin>
-        <IsAndroid>false</IsAndroid>
-        <IsIOS>false</IsIOS>
-        <IsNet>false</IsNet>
+        
+        <!-- netstandard标志 -->
         <IsToolkit>false</IsToolkit>
+        <IsToolkit Condition="$(TargetFramework.Contains('netstandard2.0'))">true</IsToolkit>
     </PropertyGroup>
     
-    <Choose>
-        <When Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">
-            <PropertyGroup>
-                <IsWin>true</IsWin>
-                <!--ENABLECURSOR 启用光标，winui赋值时容易锁死-->
-                <DefineConstants>$(DefineConstants);WIN;ENABLECURSOR</DefineConstants>
-                <TargetPlatformMinVersion>10.0.18362.0</TargetPlatformMinVersion>
-                <RuntimeIdentifiers>win-x86;win-x64;win-arm64</RuntimeIdentifiers>
-                <!-- 确保可运行 dotnet build command line -->
-                <EnableCoreMrtTooling Condition=" '$(BuildingInsideVisualStudio)' != 'true' ">false</EnableCoreMrtTooling>
-            </PropertyGroup>
-        </When>
-        <When Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">
-            <PropertyGroup>
-                <IsAndroid>true</IsAndroid>
-                <DefineConstants>$(DefineConstants);ANDROID</DefineConstants>
-                <SupportedOSPlatformVersion>21.0</SupportedOSPlatformVersion>
-            </PropertyGroup>
-        </When>
-        <When Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">
-            <PropertyGroup>
-                <IsIOS>true</IsIOS>
-                <DefineConstants>$(DefineConstants);IOS</DefineConstants>
-                <SupportedOSPlatformVersion>10.0</SupportedOSPlatformVersion>
-            </PropertyGroup>
+    <ItemGroup Condition="$(IsWinAppSdk)">
+        <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.7.250401001" PrivateAssets="none" />
+        <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.3916" PrivateAssets="none" />
+    </ItemGroup>
 
-            <!--
-              Eagerly define capabilities for iOS to avoid VS 2022 to ask for
-              project reload, and ninitialize the debugger toolbar faster.
-              See https://github.com/unoplatform/uno/issues/14303.
-              -->
-            <ItemGroup>
-                <ProjectCapability Include="XamarinStaticLaunchProfiles" />
-                <ProjectCapability Include="Maui" />
-                <ProjectCapability Include="MauiCore" />
-            </ItemGroup>
-        </When>
-        <When Condition="$(TargetFramework.Contains('netstandard2.0'))">
-            <PropertyGroup>
-                <IsToolkit>true</IsToolkit>
-            </PropertyGroup>
-        </When>
-        <Otherwise>
-            <PropertyGroup>
-                <IsNet>true</IsNet>
-                <DefineConstants>$(DefineConstants);DOTNET;ENABLECURSOR</DefineConstants>
-            </PropertyGroup>
-        </Otherwise>
-    </Choose>
+    <ItemGroup Condition="$(IsAndroid) AND $(IsExe) == 'true'">
+        <PackageReference Include="Uno.WinUI.Runtime.Skia.Android" Version="6.0.465" />
+    </ItemGroup>
 
-    <Choose>
-        <When Condition="$(IsWin)">
-            <ItemGroup>
-                <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.5.241001000" PrivateAssets="none" />
-            </ItemGroup>
-        </When>
-        <When Condition="$(IsToolkit)">
-            <!-- 不引用任何 -->
-        </When>
-        <Otherwise>
-            <ItemGroup>
-                <PackageReference Include="Uno.WinUI" Version="5.4.39" PrivateAssets="none" />
-            </ItemGroup>
+    <ItemGroup Condition="$(IsAndroid) AND $(IsExe) == 'false'">
+        <PackageReference Include="Uno.WinUI.Runtime.Skia.Android" Version="6.0.465" PrivateAssets="none" />
+    </ItemGroup>
 
-            <!-- WindowsAppSDK已内置，uno需要，否则xaml文件无法编译 -->
-            <ItemGroup>
-                <Page Include="**\*.xaml" Exclude="bin\**\*.xaml;obj\**\*.xaml" />
-                <Compile Update="**\*.xaml.cs">
-                    <DependentUpon>%(Filename)</DependentUpon>
-                </Compile>
-                <UpToDateCheckInput Include="**\*.xaml" Exclude="bin\**\*.xaml;obj\**\*.xaml" />
-            </ItemGroup>
-        </Otherwise>
-    </Choose>
+    <ItemGroup Condition="$(IsIOS) AND $(IsExe) == 'true'">
+        <PackageReference Include="Uno.WinUI.Runtime.Skia.AppleUIKit" Version="6.0.465" />
+    </ItemGroup>
 
+    <ItemGroup Condition="$(IsIOS) AND $(IsExe) == 'false'">
+        <PackageReference Include="Uno.WinUI.Runtime.Skia.AppleUIKit" Version="6.0.465" PrivateAssets="none" />
+    </ItemGroup>
+
+    <ItemGroup Condition="$(IsBrowserWasm) AND $(IsExe) == 'true'">
+        <PackageReference Include="Uno.WinUI.Runtime.Skia.WebAssembly.Browser" Version="6.0.465" />
+    </ItemGroup>
+
+    <ItemGroup Condition="$(IsBrowserWasm) AND $(IsExe) == 'false'">
+        <PackageReference Include="Uno.WinUI.Runtime.Skia.WebAssembly.Browser" Version="6.0.465" PrivateAssets="none" />
+    </ItemGroup>
+
+    <ItemGroup Condition="$(IsDesktop) AND $(IsExe) == 'true'">
+        <PackageReference Include="Uno.WinUI.Runtime.Skia.AppleUIKit" Version="6.0.465" />
+    </ItemGroup>
+
+    <ItemGroup Condition="$(IsDesktop) AND $(IsExe) == 'false'">
+        <PackageReference Include="Uno.WinUI" Version="6.0.465" PrivateAssets="none" />
+    </ItemGroup>
+    
     <PropertyGroup Condition="'$(Configuration)' == 'Release'">
         <!-- 和Deterministic配合，调试程序时使用github源文件，不使用本地源文件 -->
         <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
