--- a/Infras/Dt.CalcEngine/Dt.CalcEngine.csproj
+++ b/Infras/Dt.CalcEngine/Dt.CalcEngine.csproj
@@ -1,6 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Dt.Sdk">
 	<PropertyGroup>
 		<Description>Excel计算引擎(搬运工客户端)</Description>
+        <OutputType>Library</OutputType>
 	</PropertyGroup>
     <Import Project="..\DelXmlFiles.props" />
 </Project>
