--- a/Infras/Directory.Build.props
+++ b/Infras/Directory.Build.props
@@ -1,52 +1,64 @@
 ﻿<Project>
     <PropertyGroup>
         <!-- 修改目标框架后需重启VS有效 -->
-        <TargetFrameworks>net9.0-ios;net9.0-android;net9.0-windows10.0.26100;net9.0-browserwasm;net9.0-desktop</TargetFrameworks>
-        <!--<TargetFrameworks>net9.0-windows10.0.26100</TargetFrameworks>-->
+         <!-- <TargetFrameworks>net9.0-ios;net9.0-android;net9.0-windows10.0.26100;net9.0-browserwasm;net9.0-desktop</TargetFrameworks>  -->
+        <TargetFrameworks>net9.0-android</TargetFrameworks>
         
         <NoWarn>$(NoWarn);1591;8785;NU1701;Uno0001;0252;NETSDK1206</NoWarn>
         <!-- 始终禁止xbf嵌入到pri文件，默认debug时不嵌入，release时嵌入，嵌入时包升级会造成引用项目都必须重新编译 -->
         <DisableEmbeddedXbf>true</DisableEmbeddedXbf>
-        
+
         <!-- netstandard标志 -->
         <IsToolkit>false</IsToolkit>
         <IsToolkit Condition="$(TargetFramework.Contains('netstandard2.0'))">true</IsToolkit>
     </PropertyGroup>
-    
+
+    <!-- 所有App引用 -->
+    <ItemGroup Condition="$(IsExe) == 'true'">
+        <PackageReference Include="Dt.BuildTools" Version="1.5.0" />
+        <PackageReference Include="Uno.Resizetizer" Version="1.8.1" />
+    </ItemGroup>
+
     <ItemGroup Condition="$(IsWinAppSdk)">
         <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.7.250401001" PrivateAssets="none" />
         <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.3916" PrivateAssets="none" />
     </ItemGroup>
 
-    <ItemGroup Condition="$(IsAndroid) AND $(IsExe) == 'true'">
-        <PackageReference Include="Uno.WinUI.Runtime.Skia.Android" Version="6.0.465" />
-    </ItemGroup>
-
-    <ItemGroup Condition="$(IsAndroid) AND $(IsExe) == 'false'">
+    <ItemGroup Condition="$(IsAndroid)">
         <PackageReference Include="Uno.WinUI.Runtime.Skia.Android" Version="6.0.465" PrivateAssets="none" />
     </ItemGroup>
 
-    <ItemGroup Condition="$(IsIOS) AND $(IsExe) == 'true'">
-        <PackageReference Include="Uno.WinUI.Runtime.Skia.AppleUIKit" Version="6.0.465" />
+    <ItemGroup Condition="$(IsAndroid) AND $(IsExe) == 'true'">
+        <PackageReference Include="Xamarin.Google.Android.Material" Version="1.10.0.2" />
+        <PackageReference Include="Xamarin.AndroidX.Core.SplashScreen" Version="1.0.1.14" />
     </ItemGroup>
 
-    <ItemGroup Condition="$(IsIOS) AND $(IsExe) == 'false'">
+    <ItemGroup Condition="$(IsIOS)">
         <PackageReference Include="Uno.WinUI.Runtime.Skia.AppleUIKit" Version="6.0.465" PrivateAssets="none" />
     </ItemGroup>
 
-    <ItemGroup Condition="$(IsBrowserWasm) AND $(IsExe) == 'true'">
-        <PackageReference Include="Uno.WinUI.Runtime.Skia.WebAssembly.Browser" Version="6.0.465" />
-    </ItemGroup>
-
-    <ItemGroup Condition="$(IsBrowserWasm) AND $(IsExe) == 'false'">
+    <ItemGroup Condition="$(IsBrowserWasm)">
         <PackageReference Include="Uno.WinUI.Runtime.Skia.WebAssembly.Browser" Version="6.0.465" PrivateAssets="none" />
     </ItemGroup>
 
-    <ItemGroup Condition="$(IsDesktop) AND $(IsExe) == 'true'">
-        <PackageReference Include="Uno.WinUI.Runtime.Skia.AppleUIKit" Version="6.0.465" />
+    <ItemGroup Condition="$(IsBrowserWasm) AND $(IsExe) == 'true'">
     </ItemGroup>
 
-    <ItemGroup Condition="$(IsDesktop) AND $(IsExe) == 'false'">
+    <ItemGroup Condition="$(IsDesktop) AND $(IsExe) == 'true'">
+        <PackageReference Include="Uno.WinUI.Runtime.Skia.Linux.FrameBuffer" Version="6.0.465" />
+        <PackageReference Include="Uno.WinUI.Runtime.Skia.MacOS" Version="6.0.465" />
+        <PackageReference Include="Uno.WinUI.Runtime.Skia.Win32" Version="6.0.465" />
+        <PackageReference Include="Uno.WinUI.Runtime.Skia.Wpf" Version="6.0.465" />
+        <PackageReference Include="Uno.WinUI.Runtime.Skia.X11" Version="6.0.465" />
+
+        <!-- Enable WPF Hardware acceleration over RDP, only if not specified by the project -->
+        <RuntimeHostConfigurationOption
+				Include="Switch.System.Windows.Media.EnableHardwareAccelerationInRdp"
+				Value="true"
+				Exclude="@(RuntimeHostConfigurationOption)" />
+    </ItemGroup>
+
+    <ItemGroup Condition="$(IsDesktop) AND $(IsExe) != 'true'">
         <PackageReference Include="Uno.WinUI" Version="6.0.465" PrivateAssets="none" />
     </ItemGroup>
     
