--- a/Infras/Infras.Demo/Infras.Demo.csproj
+++ b/Infras/Infras.Demo/Infras.Demo.csproj
@@ -7,7 +7,7 @@
         <!-- Display name -->
         <ApplicationTitle>Excel样例</ApplicationTitle>
         <!-- App Identifier -->
-        <ApplicationId>com.companyname.UnoApp1</ApplicationId>
+        <ApplicationId>dt.Infras</ApplicationId>
         <!-- Versions -->
         <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
         <ApplicationVersion>1</ApplicationVersion>
@@ -20,10 +20,6 @@
 
     <ItemGroup>
         <EmbeddedResource Include="Res\**" />
-
-        <UnoIcon Include="Assets\Icons\icon.svg" ForegroundFile="Assets\Icons\icon_foreground.svg"
-                 ForegroundScale="0.7" AndroidForegroundScale="0.5" Color="#1BA1E2" />
-        <UnoSplashScreen Include="Assets\Icons\splash_screen.svg" BaseSize="128,128" Color="#1BA1E2" AndroidScale="0.7" />
     </ItemGroup>
 
     <ItemGroup>
