--- a/Infras/Directory.Build.props
+++ b/Infras/Directory.Build.props
@@ -2,11 +2,8 @@
     <PropertyGroup>
         <!-- 单目标框架：复制sln，文件名加平台后缀 -->
         <TargetFrameworks Condition="$(SolutionName.Contains('-win'))">net9.0-windows10.0.26100</TargetFrameworks>
-        <TargetFrameworks Condition="$(SolutionName.Contains('-android'))">net9.0-android</TargetFrameworks>
-        <TargetFrameworks Condition="$(SolutionName.Contains('-ios'))">net9.0-ios</TargetFrameworks>
         <TargetFrameworks Condition="$(SolutionName.Contains('-wasm'))">net9.0-browserwasm</TargetFrameworks>
-        <TargetFrameworks Condition="$(SolutionName.Contains('-desktop'))">net9.0-desktop</TargetFrameworks>
-        <TargetFrameworks Condition="$(TargetFrameworks) == ''">net9.0-ios;net9.0-android;net9.0-windows10.0.26100;net9.0-browserwasm;net9.0-desktop</TargetFrameworks>
+        <TargetFrameworks Condition="$(TargetFrameworks) == ''">net9.0-android;net9.0-ios;net9.0-windows10.0.26100;net9.0-desktop;net9.0-browserwasm</TargetFrameworks>
 
         <NoWarn>$(NoWarn);1591;8785;NU1701;Uno0001;0252;NETSDK1206</NoWarn>
         <!-- 始终禁止xbf嵌入到pri文件，默认debug时不嵌入，release时嵌入，嵌入时包升级会造成引用项目都必须重新编译 -->
@@ -43,9 +40,15 @@
 
     <ItemGroup Condition="$(IsBrowserWasm)">
         <PackageReference Include="Uno.WinUI.Runtime.Skia.WebAssembly.Browser" Version="6.0.465" PrivateAssets="none" />
+        
     </ItemGroup>
 
     <ItemGroup Condition="$(IsBrowserWasm) AND $(IsExe) == 'true'">
+        <PackageReference Include="Uno.Wasm.Bootstrap" Version="9.0.16" />
+        <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="9.0.16" />
+        <PackageReference Include="Uno.WinUI.Runtime.WebAssembly" Version="6.0.465" PrivateAssets="all" IncludeAssets="none" ExcludeAssets="all" />
+        <!-- 不引用link出错 -->
+        <PackageReference Include="Microsoft.Windows.Compatibility" Version="8.0.15" />
     </ItemGroup>
 
     <ItemGroup Condition="$(IsDesktop) AND $(IsExe) == 'true'">
