--- a/Demo/Demo.Crud/Demo.Crud.csproj
+++ b/Demo/Demo.Crud/Demo.Crud.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Dt.Sdk">
 	<ItemGroup>
 		<ProjectReference Include="..\Demo.Base\Demo.Base.csproj" />
 		<Using Include="Demo.Base" />
