--- a/Demo/Demo.Lob/Demo.Lob.csproj
+++ b/Demo/Demo.Lob/Demo.Lob.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Dt.Sdk">
 	<ItemGroup>
 		<ProjectReference Include="..\Demo.Base\Demo.Base.csproj" />
 		<Using Include="Demo.Base" />
