--- a/Demo/Demo.UI/Demo.UI.csproj
+++ b/Demo/Demo.UI/Demo.UI.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Dt.Sdk">
 	<ItemGroup>
 		<Content Include="Files\Content\**" />
 		<EmbeddedResource Include="Files\Embed\**" />
