Microsoft.Web.WebView2排除runtime

--- a/Infras/Directory.Build.props
+++ b/Infras/Directory.Build.props
@@ -18,8 +18,11 @@
         
     <!-- WinAppSdk -->
     <ItemGroup Condition="$(IsWinAppSdk)">
-        <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.7.250513003" />
+        <!-- 1.7版本主线程异步异常会崩溃 -->
+        <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.6.250602001" />
         <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.4188" />
+        <!-- Microsoft.WindowsAppSDK内部引用，排除runtime，否则打包时必须包含 native\WebView2Loader.dll -->
+        <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.3296.44" ExcludeAssets="runtime" />
     </ItemGroup>
 
     <!-- 非WinAppSdk引用 -->
