将BaseAppActivity功能转静态方法，ApplicationActivity 只能在exe项目中使用

--- a/Client/References.props
+++ b/Client/References.props
@@ -54,10 +54,11 @@
     
     <!-- Android -->
     <ItemGroup Condition="$(IsAndroid)">
-        <PackageReference Include="Uno.WinUI.Runtime.Skia.Android" Version="$(UnoVersion)" />
+        <PackageReference Include="Uno.WinUI.Runtime.Skia.Android" Version="$(UnoVersion)" PrivateAssets="all" IncludeAssets="build" />
         <PackageReference Include="Square.OkHttp3" Version="4.12.0.9" />
         <!-- WorkManager后台任务引用 -->
         <PackageReference Include="Xamarin.AndroidX.Work.Runtime" Version="2.9.0.5" />
+        <PackageReference Include="Xamarin.AndroidX.Core.SplashScreen" Version="1.0.1.14" />
     </ItemGroup>
 
     <!-- IOS -->
